add IMb encoding/decoding functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: uspsimb
 Title: USPS Intelligent Mail Barcode Encoder/Decoder
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "Matthew",
            family = "Van Hala",
@@ -9,12 +9,22 @@ Authors@R:
 Description: Functions to encode and decode USPS Intelligent Mail Barcodes
     on letters.
 License: GPL (>= 3)
+Depends: 
+    R (>= 2.10)
+Imports: 
+    binaryLogic,
+    checkmate,
+    dplyr,
+    magrittr,
+    purrr,
+    Rmpfr,
+    stringr,
+    tibble,
+    tidyr
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: 
-    R (>= 2.10)
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
