--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,8 @@ Imports:
     tidyr
 Suggests:
     testthat (>= 3.0.0)
+Remotes:
+    github::d4ndo/binaryLogic
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
